--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -12,7 +12,7 @@ repos:
       - id: check-useless-excludes
 
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.4.0
+    rev: v4.5.0
     hooks:
       - id: check-ast
       - id: check-case-conflict
@@ -27,7 +27,7 @@ repos:
       - id: trailing-whitespace
 
   - repo: https://github.com/ComPWA/repo-maintenance
-    rev: 0.0.197
+    rev: 0.1.0
     hooks:
       - id: check-dev-files
         args:
@@ -36,14 +36,11 @@ repos:
           - --pin-requirements=bimonthly
           - --repo-name=ampform-dpd
           - --repo-title=AmpForm-DPD
-      - id: format-setup-cfg
+      - id: colab-toc-visible
 
   - repo: https://github.com/nbQA-dev/nbQA
     rev: 1.7.0
     hooks:
-      - id: nbqa-black
-        additional_dependencies:
-          - black>=22.1.0
       - id: nbqa-pyupgrade
         args:
           - --py37-plus
@@ -55,14 +52,17 @@ repos:
     rev: 23.9.1
     hooks:
       - id: black
+      - id: black-jupyter
+        args: [--line-length=85]
+        types_or: [jupyter]
 
   - repo: https://github.com/streetsidesoftware/cspell-cli
-    rev: v7.3.0
+    rev: v7.3.1
     hooks:
       - id: cspell
 
   - repo: https://github.com/editorconfig-checker/editorconfig-checker.python
-    rev: "2.7.2"
+    rev: 2.7.2
     hooks:
       - id: editorconfig-checker
         name: editorconfig
@@ -82,6 +82,7 @@ repos:
             cell.attachments
             cell.metadata.code_folding
             cell.metadata.id
+            cell.metadata.pycharm
             cell.metadata.user_expressions
             metadata.celltoolbar
             metadata.colab.name
@@ -102,19 +103,19 @@ repos:
       - id: prettier
 
   - repo: https://github.com/ComPWA/mirrors-pyright
-    rev: v1.1.328
+    rev: v1.1.330
     hooks:
       - id: pyright
 
   - repo: https://github.com/asottile/pyupgrade
-    rev: v3.11.2
+    rev: v3.15.0
     hooks:
       - id: pyupgrade
         args:
           - --py37-plus
 
   - repo: https://github.com/astral-sh/ruff-pre-commit
-    rev: v0.0.290
+    rev: v0.0.292
     hooks:
       - id: ruff
         args:
@@ -124,3 +125,10 @@ repos:
     rev: v0.8.1
     hooks:
       - id: taplo
+
+  - repo: https://github.com/pappasam/toml-sort
+    rev: v0.23.1
+    hooks:
+      - id: toml-sort
+        args:
+          - --in-place
